# UCSD-Bioinfo-1

./: Problem1.ipynb  Problem1.py  README.md  pyproject.toml  thiago_lib.py
.devcontainer/: devcontainer.json
data/: dataset_2_6.txt
tests/: test_pattern_count.py
