[tool.poetry]
name = "ucsd-bioinfo1"
version = "0.1.0"
description = ""
authors = ["mtsz-thiago <mtsz.thiago@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
biopython = "^1.80"
ipykernel = "^6.20.0"
jupyter = "^1.0.0"
pytest = "^7.2.0"
numpy = "^1.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
